# CppNumericalMethods

./: CMakeLists.txt  Differentiation.cpp  Differentiation.h  FiniteDifferences.cpp  FiniteDifferences.h  Integration.cpp  Integration.h  PolynomialApproximation.cpp  PolynomialApproximation.h  SingleNonLinear.cpp  SingleNonLinear.h  main.cpp
include/NumericalMethods/: Differentiation.h  Integration.h  ODESolver.h  PolynomialApproximation.h  SingleNonLinear.h
src/: Differentiation.cpp  Integration.cpp  PolynomialApproximation.cpp  SingleNonLinear.cpp  main.cpp
